@@ -25,5 +25,8 @@
 \examples{
 (d <- date())
 nchar(d) == 24
+
+## something similar in the current locale
+format(Sys.time(), "\%a \%b \%d \%H:\%M:\%S \%Y")
 }
 \keyword{utilities}
